syntax = "proto3";


import "Article.proto";

service ClientToServer{
    rpc JoinServer(JoinServerRequest) returns (JoinServerResponse) {}
    rpc LeaveServer(LeaveServerRequest) returns (LeaveServerResponse) {}
    rpc GetArticles(GetArticlesRequest) returns (stream GetArticlesResponse) {}
    rpc PublishArticles(PublishArticlesRequest) returns (PublishArticlesResponse) {}
}

message JoinServerRequest{
    string uuid = 1;
}

message LeaveServerRequest{
    string uuid = 1;
}

message GetArticlesRequest{
    string uuid = 1;
    Article ArticleResquest = 2;
}

message PublishArticlesRequest{
    string uuid = 1;
    Article Article = 2;
}

message JoinServerResponse{
    string status = 1;
}

message LeaveServerResponse{
    string status = 1;
}

message GetArticlesResponse{
    Article Article = 1;
}

message PublishArticlesResponse{
    string status = 1;
}